--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         ¿Tenés un proyecto?
       </a> -->
 
-      <a href="./Julian-Nunez-CV.pdf"
+      <a href="./CV_Julian_Nunez_.pdf""
    download
    class="border border-accent px-6 py-3 rounded-lg font-semibold hover:bg-accent hover:text-white transition">
    Mi CV
@@ -170,3 +170,4 @@
 
 </body>
 </html>
+
